--- a/GPT2.ipynb
+++ b/GPT2.ipynb
@@ -4,13 +4,100 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:None for open-end generation.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'generated_text': 'Hello, I\\'m a language model, so you can\\'t define something in any other language. Let me introduce another topic:\\n\\nThe name \"'},\n",
+       " {'generated_text': \"Hello, I'm a language model, you know.\\n\\nThat's right… I have a lot of friends who don't know what I do\"},\n",
+       " {'generated_text': \"Hello, I'm a language model, not a formal one. I'm more interested in languages than formal models and I'm going to use the formal\"},\n",
+       " {'generated_text': \"Hello, I'm a language model, and I have two languages, one my native, and one one my Portuguese, so... I've got a\"},\n",
+       " {'generated_text': \"Hello, I'm a language model,\\n\\nAnd you know I have lots of problems.\\n\\nThe grammar is not just bad but annoying because\"}]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from transformers import pipeline, set_seed\n",
+    "generator = pipeline('text-generation', device=\"cuda\", model='gpt2')\n",
+    "set_seed(42)\n",
+    "generator(\"Hello, I'm a language model,\", max_length=30, truncation=True, num_return_sequences=5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open('tinyshakespeare.txt', 'r') as f:\n",
+    "    text = f.read()\n",
+    "data = text[:1000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5962, 22307, 25, 198, 8421, 356, 5120, 597, 2252, 11, 3285, 502, 2740, 13, 198, 198, 3237, 25, 198, 5248, 461, 11, 2740, 13]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tiktoken\n",
+    "enc = tiktoken.get_encoding('gpt2')\n",
+    "tokens = enc.encode(data)\n",
+    "print(tokens[:24])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 5962, 22307,    25,   198,  8421,   356],\n",
+      "        [ 5120,   597,  2252,    11,  3285,   502],\n",
+      "        [ 2740,    13,   198,   198,  3237,    25],\n",
+      "        [  198,  5248,   461,    11,  2740,    13]])\n",
+      "tensor([[22307,    25,   198,  8421,   356,  5120],\n",
+      "        [  597,  2252,    11,  3285,   502,  2740],\n",
+      "        [   13,   198,   198,  3237,    25,   198],\n",
+      "        [ 5248,   461,    11,  2740,    13,   198]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "buf = torch.tensor(tokens[:24 + 1])\n",
+    "x = buf[:-1].view(4, 6)\n",
+    "y = buf[1:].view(4, 6)\n",
+    "print(x)\n",
+    "print(y)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
